# schlagzeilengenerator

./: .gitignore  LICENSE  Procfile  README.md  README.rst  app.py  docker-compose.yml  fabfile.py  fixtures.py  models.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  Dockerfile.ubuntu  app.py  pyproject.toml  requirements.txt
app/data/: action.json  adjective.json  intro.json  prefix.json  suffix.json
app/env/: dev
app/templates/: base.html
data/: action.json  adjective.json  intro.json  prefix.json  suffix.json
env/: dev
mongo/: Dockerfile  init.sh
mongo/data/: action.json  adjective.json  intro.json  prefix.json  suffix.json
nginx/: Dockerfile  drop.conf  nginx.conf
nix/: README.md  flake.nix  module.nix  package.nix
static/: ie.css  style.css
templates/: about.html  base.html  headline.html
